# cli

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
